main 3 card has been added

--- a/index.html
+++ b/index.html
@@ -45,5 +45,44 @@
             </div>
         </main>
     </header>
+
+    <main>
+        <main class="container main-top-desc">
+            <h1>Popular Location</h1>
+            <p>
+                For every one of us, travel came first. We’ve spent years living as nomads, pioneers, and voyagers— from island hopping in the
+            </p>
+            <div class="main-top-cards">
+                <div class="card-box">
+                    <div class="card-box-img">
+                        <img src="./images/main-top-card-img1.png" alt="Istanbul Turkey">
+                    </div>
+                    <h2>Istanbul, Turkey</h2>
+                    <p>
+                        Istanbul is a major city in Turkey that straddles Europe.
+                    </p>
+                </div>
+
+                <div class="card-box">
+                    <div class="card-box-img">
+                        <img src="./images/main-top-card-img2.png" alt="Istanbul Turkey">
+                    </div>
+                    <h2>Kuala Lumpur, malaysia</h2>
+                    <p>
+                        Istanbul is a  city in Turkey that straddles Europe.
+                    </p>
+                </div>
+
+                <div class="card-box">
+                    <div class="card-box-img">
+                        <img src="./images/main-top-card-img3.png" alt="Istanbul Turkey">
+                    </div>
+                    <h2>Seoul, South Korea</h2>
+                    <p>
+                        South Korea officially the Republic of Korea is a country in East Asia.
+                    </p>
+                </div>
+        </main>
+    </main>
 </body>
 </html>
