main bottom added

--- a/index.html
+++ b/index.html
@@ -243,6 +243,90 @@
                     </p>
                 </div>
             </div>
+            <div class="main-center-pagination">
+                <span><svg width="10" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6 11L1 6L6 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M13.0001 11L8.00012 6L13.0001 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    </span>
+                <span><svg width="200" height="5" viewBox="0 0 231 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <rect width="75" height="5" rx="2.5" fill="#C9453B" fill-opacity="0.1"/>
+                    <rect x="78" width="75" height="5" rx="2.5" fill="#C9453B"/>
+                    <rect x="156" width="75" height="5" rx="2.5" fill="#C9453B" fill-opacity="0.1"/>
+                    </svg>
+                    </span>
+                <span>
+                    <svg width="10" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.00012 11L13.0001 6L8.00012 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M1 11L6 6L1 1" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                        
+                </span>
+            </div>
+        </main>
+
+        <main class="main-bottom-desc container">
+            <h1>
+                From Blog & News
+            </h1>
+            <p>
+                Welcome to Community Conversations, a new interview series featuring Intrepid travellers, creatives and activists in our community.
+            </p>
+            <div class="bottom-desc-cards">
+                <div class="desc-cards-left">
+                    <div class="card-img">
+                        <img src="./images/bottom-card-left-img.png" alt="Banf nattional park">
+                    </div>
+
+                    <h2>
+                        Banff National Park
+                    </h2>
+                    <p>
+                        Banff National Park lies in the heart of the majestic Rocky Mountains in the province of Alberta, and showcases some of Canada's most beautiful scenery. Turquoise-colored lakes, snow-capped peaks, and glaciers are all easily accessible
+                    </p>
+                    <h5>
+                        @thomasalva_adison
+                    </h5>
+                </div>
+                <div class="desc-cards-right">
+                    <div class="right-box">
+                        <div class="box-img">
+                            <img src="./images/main-bottom-card-rightcard1.jpg" alt="Hiroshima">
+                        </div>
+
+                        <div class="box-desc">
+                            <h2>The Hiroshima Peace!</h2>
+                            <p>
+                                It was formally opened to the public in August that year.
+                            </p>
+                            <h5>@shova_bd88</h5>
+                        </div>
+                    </div>
+                    <div class="right-box">
+                        <div class="box-img">
+                            <img src="./images/main-bottom-card-rightcard2.jpg" alt="Hiroshima">
+                        </div>
+                        <div class="box-desc">
+                            <h2>The faithful prayers!</h2>
+                            <p>
+                                It was formally opened to the public in August that year.
+                            </p>
+                            <h5>@adem/smith</h5>
+                        </div>
+                    </div>
+                    <div class="right-box">
+                        <div class="box-img">
+                            <img src="./images/main-bottom-card-rightcard3.jpg" alt="Hiroshima">
+                        </div>
+                        <div class="box-desc">
+                            <h2>Colourful waters!</h2>
+                            <p>
+                                It was formally opened to the public in August that year.
+                            </p>
+                            <h5>@jhon7leew</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </main>
 </body>
